--- a/app/views/articales/show.html.erb
+++ b/app/views/articales/show.html.erb
@@ -1,10 +1,13 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @articale %>
+<h1><%= @article.title%></h1>
+
+<p><%=  @article.content %></p>
+
 
 <div>
-  <%= link_to "Edit this articale", edit_articale_path(@articale) %> |
+  <%= link_to "Edit this articale", edit_articale_path(@article) %> |
   <%= link_to "Back to articales", articales_path %>
 
-  <%= button_to "Destroy this articale", @articale, method: :delete %>
+  <%= button_to "Destroy this articale", @article, method: :delete %>
 </div>
