learn about how to use partial locals

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,5 @@
 <p style="color: green"><%= notice %></p>
+<%= render "header"%>
 
 <% content_for :title, "Products" %>
 
@@ -20,3 +21,4 @@
 <br>
 <br>
 <%= render "mypractice"%>
+<%= render "footer"%>
