--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @product %>
+<%= render partial: "product", locals: {my_product: @product} %>
 
 <div>
   <%= link_to "Edit this product", edit_product_path(@product) %> |
