--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
 <h1>This is the pages controller created for practice through youtube tutorial<h1>
 
-    <%= link_to 'About Us', about_path%><br><br>
+    <%= link_to 'About Us', about_path, style: 'color:green;'%><br><br>
     <%= link_to 'Privacy Policy', privacy_path%>
