--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,16 @@
 <h1>User Details</h1>
 
 <p>
-  <strong>Name:</strong>
+  <strong>Id:</strong>
   <%= @user.id %>
 </p>
 
 <p>
-  <strong>Age:</strong>
+  <strong>Name:</strong>
   <%= @user.name%>
 </p>
 
 <p>
-  <strong>Created At:</strong>
+  <strong>Email:</strong>
   <%= @user.email %>
 </p>
