--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Ads#show</h1>
-<p>Find me in app/views/ads/show.html.erb</p>
+<h1>Ad Show Page</h1>
+
+<p>ID: <%= @ad.id %></p>
+<p>Magazine ID: <%= @magazine.id %></p>
