--- a/app/views/magazines/show.index.html.erb
+++ b/app/views/magazines/show.index.html.erb
@@ -1,1 +1,4 @@
-<h1>This is the show file of magazines controller</h1>
+<h1>Magazine Show Page</h1>
+
+<p>ID: <%= @magazine.id %></p>
+<p>Magazine ID: <%= @ad.id %></p>
