--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,19 +1,15 @@
-<h1>List of Items</h1>
-<table>
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Uses</th>
-            <th>Price</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% @items.each do |items|%>
-        <tr>
-            <td><%= items.name%></td>
-            <td><%= items.uses%></td>
-            <td><%= items.price%></td>
-        </tr>
-        <%end%>
-    </tbody>
-</table>
+<h1>Items</h1>
+
+<% if @items.any? %>
+  <ol><br><br>
+    <% @items.each do |item| %>
+      <li>
+        <%= link_to item.name, item_path(item) %>
+      </li>
+    <% end %>
+  </ol>
+<% else %>
+  <p>No items found.</p>
+<% end %>
+<%#= render "table"%>
+
